--- a/package.json
+++ b/package.json
@@ -24,74 +24,83 @@
     "homepage": "https://github.com/holloway/mahara-mobile",
     "dependencies": {
         "android-versions": "^1.3.0",
-        "autoprefixer": "~6.0.1",
-        "babel": "~6.3.26",
-        "babel-plugin-transform-class-properties": "~6.11.5",
-        "babel-plugin-transform-export-extensions": "~6.8.0",
-        "babel-polyfill": "~6.13.0",
-        "babel-preset-latest": "~6.14.0",
-        "babel-preset-react": "~6.3.13",
-        "babelify": "~7.2.0",
-        "browserify": "~13.1.0",
-        "cordova": "~6.5.0",
-        "cordova-serve": "~1.0.0",
-        "glob": "~7.0.3",
+        "autoprefixer": "^9.5.0",
+        "browserify": "^16.2.3",
+        "cordova": "^9.0.0",
+        "cordova-android": "^8.0.0",
+        "cordova-browser": "^6.0.0",
+        "cordova-ios": "^5.0.0",
+        "cordova-plugin-camera": "~4.0.3",
+        "cordova-plugin-device": "~2.0.2",
+        "cordova-plugin-file": "6.0.1",
+        "cordova-plugin-globalization": "^1.11.0",
+        "cordova-plugin-inappbrowser": "3.0.0",
+        "cordova-plugin-media": "~5.0.2",
+        "cordova-plugin-media-capture": "^3.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-serve": "~3.0.0",
+        "glob": "^7.1.3",
         "grapnel": "~0.6.2",
-        "gulp": "~3.9.0",
-        "gulp-babel": "~6.1.1",
+        "gulp": "^4.0.0",
+        "gulp-babel": "^8.0.0",
         "gulp-concat": "~2.6.0",
-        "gulp-cssnext": "~1.0.1",
-        "gulp-postcss": "~6.0.1",
-        "gulp-rename": "~1.2.2",
-        "gulp-replace": "~0.5.4",
-        "gulp-sourcemaps": "~1.6.0",
-        "gulp-uglify": "~2.0.0",
+        "gulp-postcss": "^8.0.0",
+        "gulp-rename": "^1.4.0",
+        "gulp-replace": "^1.0.0",
+        "gulp-sourcemaps": "^2.6.4",
+        "gulp-uglify": "^3.0.1",
         "gulp-util": "~3.0.7",
-        "jquery": "3.1.1",
-        "json5": "~0.5.0",
-        "postcss-import": "~7.1.3",
-        "postcss-mixins": "~3.0.2",
-        "postcss-nested": "~1.0.0",
-        "postcss-simple-vars": "~1.1.0",
-        "react": "~15.3.2",
-        "react-dom": "~15.3.2",
-        "react-pull-to-refresh": "~1.0.6",
+        "jquery": "^3.3.1",
+        "json5": "^2.1.0",
+        "postcss-import": "^12.0.1",
+        "postcss-mixins": "^6.2.1",
+        "postcss-nested": "^4.1.1",
+        "postcss-simple-vars": "^5.0.2",
+        "prop-types": "^15.7.2",
+        "react": "~15.6.2",
+        "react-dom": "~15.6.2",
+        "react-pull-to-refresh": "^1.1.2",
         "react-redux": "~4.4.5",
         "react-select": "^1.0.0-rc.10",
         "react-select2": "https://github.com/agwells/react-select2/releases/download/v4.0.2-beta3/react-select2-4.0.1.tgz",
         "redux": "~3.6.0",
         "vinyl-buffer": "~1.0.0",
-        "vinyl-source-stream": "~1.1.0"
+        "vinyl-source-stream": "^2.0.0"
     },
     "devDependencies": {
-        "babel-eslint": "^7.0.0",
-        "babel-preset-env": "^1.6.0",
-        "eslint": "^3.7.1",
-        "eslint-config-standard": "^6.2.0",
-        "eslint-plugin-import": "^2.0.0",
-        "eslint-plugin-promise": "^3.3.0",
-        "eslint-plugin-react": "^6.10.3",
-        "eslint-plugin-standard": "^2.0.0"
+        "@babel/core": "^7.4.3",
+        "@babel/preset-env": "^7.4.3",
+        "@babel/preset-react": "^7.0.0",
+        "babel-eslint": "^10.0.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-export-extensions": "^6.22.0",
+        "babel-polyfill": "^6.26.0",
+        "babelify": "^10.0.0",
+        "eslint": "^5.16.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.16.0",
+        "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-promise": "^4.1.1",
+        "eslint-plugin-react": "^7.12.4",
+        "eslint-plugin-standard": "^4.0.0"
     },
     "cordova": {
         "platforms": [
-            "android",
             "browser",
-            "ios"
+            "ios",
+            "android"
         ],
         "plugins": {
             "cordova-plugin-camera": {},
             "cordova-plugin-device": {},
             "cordova-plugin-file": {},
-            "cordova-plugin-file-transfer": {},
             "cordova-plugin-globalization": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-media": {},
-            "cordova-plugin-media-capture": {
-                "PHOTOLIBRARY_USAGE_DESCRIPTION": "Used to upload photos to a Mahara site"
-            },
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-media-capture": {}
         }
     }
 }
