--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     ],
     "rules": {
         "react/display-name": 0,
+        "react/no-string-refs": 0,
         "linebreak-style": [
             "error",
             "unix"
